# iso-codes

./: .cvsignore  .gitattributes  .gitignore  CHANGELOG-PRE-4.0.md  CHANGELOG.md  ChangeLog  ChangeLog.md  Makefile  Makefile.am  Makefile.in  README  README.md  REUSE.toml  TODO  TODO.md  aclocal.m4  autogen.sh  bootstrap  check_valid_utf8.pl  check_valid_utf8.py  common.mk  configure  configure.ac  iso-codes-merge.py  iso-codes.pc.in  iso2pot.py  iso2tab.py  meson.build  rules.make  tab2h.pl
data/: iso_15924.json  iso_3166-1.json  iso_3166-2.json  iso_3166-3.json  iso_4217.json  iso_639-2.json  iso_639-3.json  iso_639-5.json  schema-15924.json  schema-3166-2.json  schema-639-3.json  schema-639-5.json
debian/: .changelog.swp  changelog  control  copyright  rules  watch
iso_15924/: LINGUAS  Makefile.am  Makefile.in  ar.po  ar_XB.po  ast.po  ba.po  bar.po  be.po  bew.po  bg.po  bin.po  biodentis.po  bn_BD.po  br.po  bs_Cyrl.po  bs_Latn.po  c2.po  ca.po  ckb.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  (+50 more)
iso_3166/: .ko.po.swp  Makefile  Makefile.am  Makefile.in  aa.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  byn.po  ca.po  crh.po  cs.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  ga.po  gez.po  gl.po  gu.po  gv.po  (+95 more)
iso_3166-1/: LINGUAS  Makefile.am  Makefile.in  ab.po  ace.po  ach.po  af.po  ak.po  am.po  an.po  ar.po  ar_XB.po  as.po  ast.po  ay.po  az.po  ba.po  bar.po  be.po  bew.po  bg.po  bi.po  bin.po  biodentis.po  bn.po  bn_IN.po  br.po  bs.po  bs_Cyrl.po  bs_Latn.po  byn.po  c2.po  ca.po  ce.po  ch.po  chr.po  ckb.po  crh.po  cs.po  csb.po  (+135 more)
iso_3166-2/: LINGUAS  Makefile.am  Makefile.in  ar_XB.po  ast.po  az.po  ba.po  bar.po  be.po  bew.po  bg.po  bin.po  biodentis.po  bn_BD.po  br.po  bs.po  bs_Cyrl.po  bs_Latn.po  c2.po  ca.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  en.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  he.po  hi.po  hr.po  hu.po  (+46 more)
iso_3166-3/: LINGUAS  Makefile.am  Makefile.in  af.po  am.po  ar.po  ar_XB.po  as.po  ast.po  az.po  ba.po  bar.po  be.po  bew.po  bg.po  bin.po  biodentis.po  bn.po  bn_IN.po  br.po  bs.po  bs_Cyrl.po  bs_Latn.po  byn.po  c2.po  ca.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  (+88 more)
iso_3166/iso_3166_1/: Makefile  af.po  ar.po  az.po  bg.po  br.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  iso_3166_1.pot  iso_3166_1.tab  it.po  ja.po  ko.po  lt.po  lv.po  mi.po  mk.po  mn.po  mt.po  nb.po  nl.po  no.po  (+22 more)
iso_3166/iso_3166_2/: Makefile  Makefile.am  Makefile.in  af.po  ar.po  az.po  bg.po  br.po  bs.po  ca.po  crh.po  cs.po  da.po  el.po  en.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  iso_3166_2.pot  iso_3166_2.tab  iso_3166_2.xml  it.po  ja.po  ko.po  lt.po  lv.po  mi.po  mk.po  mn.po  (+27 more)
iso_3166/iso_3166_3/: Makefile  af.po  ar.po  az.po  bg.po  br.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  iso_3166_3.pot  iso_3166_3.tab  it.po  ja.po  ko.po  lt.po  lv.po  mi.po  mk.po  mn.po  mt.po  nb.po  nl.po  no.po  (+22 more)
iso_3166_2/: Makefile.am  Makefile.in  az.po  bg.po  bs.po  ca.po  crh.po  cs.po  da.po  de.po  el.po  en.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  hu.po  id.po  iso_3166_2.pot  iso_3166_2.xml  it.po  ja.po  ko.po  lt.po  lv.po  nl.po  nso.po  oc.po  pl.po  ro.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  tr.po  uk.po  (+5 more)
iso_4217/: LINGUAS  Makefile  Makefile.am  Makefile.in  af.po  ar.po  ar_XB.po  ast.po  ba.po  bar.po  be.po  bew.po  bin.po  biodentis.po  bn.po  br.po  bs_Cyrl.po  bs_Latn.po  c2.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hi.po  hr.po  hu.po  id.po  is.po  iso_4217.pot  iso_4217.tab  (+48 more)
iso_639/: Makefile  Makefile.am  Makefile.in  aa.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  byn.po  ca.po  crh.po  cs.po  cy.po  da.po  de.po  dv.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  ga.po  gez.po  gl.po  gu.po  gv.po  haw.po  he.po  (+82 more)
iso_639-2/: LINGUAS  Makefile.am  Makefile.in  af.po  am.po  ar.po  ar_XB.po  as.po  ast.po  az.po  ba.po  bar.po  be.po  bew.po  bg.po  bin.po  biodentis.po  bn.po  bn_BD.po  br.po  bs.po  bs_Cyrl.po  bs_Latn.po  byn.po  c2.po  ca.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+78 more)
iso_639-3/: LINGUAS  Makefile.am  Makefile.in  af.po  am.po  ar.po  ar_XB.po  ast.po  az.po  ba.po  bar.po  be.po  bew.po  bg.po  bin.po  biodentis.po  bn.po  br.po  bs.po  bs_Cyrl.po  bs_Latn.po  byn.po  c2.po  ca.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  (+73 more)
iso_639-5/: LINGUAS  Makefile.am  Makefile.in  ab.po  ar_XB.po  ast.po  ba.po  bar.po  be.po  bew.po  bin.po  biodentis.po  bn.po  bn_BD.po  bs_Cyrl.po  bs_Latn.po  c2.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  is.po  iso-dis-639_5-parse.py  iso_639-5.pot  iso_639_5.xml  it.po  ka.po  kab.po  lo.po  lt.po  (+24 more)
iso_639/iso_639_3/: .cvsignore  Makefile.am  Makefile.in  aa.po  af.po  am.po  ar.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  byn.po  ca.po  cs.po  cy.po  da.po  de.po  dv.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  ga.po  gez.po  gl.po  gu.po  gv.po  haw.po  he.po  hi.po  hr.po  hu.po  hy.po  (+73 more)
iso_639_3/: Makefile.am  Makefile.in  af.po  am.po  ar.po  ast.po  az.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  byn.po  ca.po  crh.po  cs.po  cy.po  (+71 more)
iso_639_5/: Makefile.am  Makefile.in  de.po  fr.po  iso-dis-639_5-download.sh  iso-dis-639_5-parse.py  iso_639_5.pot  nl.po  pl.po  sr@latin.po
(+23 files in other folders)
